cost function and gradient descent

--- a/Regression.ipynb
+++ b/Regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN7uGD/3U1ZcVG/EhCIgeYA"
+      "authorship_tag": "ABX9TyPUMRCDpDL/N3z08wi1WrND"
     },
     "kernelspec": {
       "name": "python3",
@@ -36,7 +36,7 @@
       "metadata": {
         "id": "BFJr5WCnGoga"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -50,9 +50,9 @@
           "height": 206
         },
         "id": "AbVVf-vpIGbL",
-        "outputId": "04866b08-15c6-4304-f532-9e8eeec09c79"
+        "outputId": "801b90aa-7b62-4884-dca9-ac9c5518b502"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -67,7 +67,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5661d66e-dcf9-4b4d-90ff-c44f5dc6df17\">\n",
+              "  <div id=\"df-a73f12c8-8277-45d0-9137-e49894f4d666\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -138,7 +138,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5661d66e-dcf9-4b4d-90ff-c44f5dc6df17')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a73f12c8-8277-45d0-9137-e49894f4d666')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -189,12 +189,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-5661d66e-dcf9-4b4d-90ff-c44f5dc6df17 button.colab-df-convert');\n",
+              "          document.querySelector('#df-a73f12c8-8277-45d0-9137-e49894f4d666 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-5661d66e-dcf9-4b4d-90ff-c44f5dc6df17');\n",
+              "          const element = document.querySelector('#df-a73f12c8-8277-45d0-9137-e49894f4d666');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -217,7 +217,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -229,7 +229,7 @@
       "metadata": {
         "id": "cBVGsJWNJUG7"
       },
-      "execution_count": 13,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -242,9 +242,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jLsvh5v3J6Vb",
-        "outputId": "9bddeee8-e320-4f0f-d076-7fabb3706b6a"
+        "outputId": "6653309f-ebf1-45bc-ecc8-b38539167c55"
       },
-      "execution_count": 14,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -263,7 +263,7 @@
       "metadata": {
         "id": "b_GpIer5Kte4"
       },
-      "execution_count": 17,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -276,9 +276,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JNLGQsRrLUM1",
-        "outputId": "0da8a2bc-5efa-47b5-b162-cbbe4296ab25"
+        "outputId": "03b4dbc9-c9fc-4a3a-9bdb-001185171ffe"
       },
-      "execution_count": 18,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -458,9 +458,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KuNn_jEeL0Ht",
-        "outputId": "19f9cf62-82f8-4117-e675-bb697b4b28e0"
+        "outputId": "91198f89-d336-4758-ec39-089b7a62fc71"
       },
-      "execution_count": 19,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -479,7 +479,7 @@
       "metadata": {
         "id": "AwIYBlFnL-JN"
       },
-      "execution_count": 25,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -492,9 +492,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OLhX8YEoMHK7",
-        "outputId": "b54dd3f9-3d58-47ea-87e8-588ec5a99408"
+        "outputId": "f0f834dd-8378-4f2f-dc51-a145bb3aec16"
       },
-      "execution_count": 26,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -515,9 +515,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TKODVpHpMJvo",
-        "outputId": "76023f21-ec2e-4f63-bd89-3278b979f950"
+        "outputId": "c3d153fe-1aaf-4d3a-bbf3-42493e45dcde"
       },
-      "execution_count": 27,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -560,9 +560,9 @@
           "height": 483
         },
         "id": "sapcdPUSMMpy",
-        "outputId": "f0b64d57-c060-40f6-a62e-7f2d3b36b963"
+        "outputId": "a320085c-d812-401c-bc77-4f2c59c44f99"
       },
-      "execution_count": 34,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -572,7 +572,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 12
         },
         {
           "output_type": "display_data",
@@ -588,9 +588,277 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def pred(w, x, b):\n",
+        "  result = np.dot(w,x)+b\n",
+        "  return result"
+      ],
       "metadata": {
         "id": "v6TToaIXOBjV"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def cost_function(w, X, Y, b, m):\n",
+        "  cost = 0\n",
+        "  for i in range(m):\n",
+        "    prediction = pred(w, X[i, :], b)\n",
+        "    cost += (prediction-Y[i,])**2\n",
+        "  cost = cost/(2*m)\n",
+        "  return cost"
+      ],
+      "metadata": {
+        "id": "sLbzsLT3VNtF"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(X_train[0, :])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7BP6YutRWCZJ",
+        "outputId": "6d1eb8b9-7b6f-47b8-c898-679ae99789c3"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[230.1  37.8  69.2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(Y_train[0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6MbGclqoWskf",
+        "outputId": "e9cee175-4025-4e53-b379-0d4c953b1005"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "22.1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "w = [0, 0, 0]\n",
+        "b = 0"
+      ],
+      "metadata": {
+        "id": "M9i6jpubW01K"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m = len(X_train)\n",
+        "J = cost_function(w, X_train, Y_train, b, m)\n",
+        "print(J)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HX7okXh9XQnC",
+        "outputId": "e9073d7b-a851-4bd2-d85d-de6f46fe2d55"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "112.48953125000003\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prediction = pred(w, X_train[0, :], b)\n",
+        "print(prediction)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GXMD_FRTb07h",
+        "outputId": "4b1fe922-dcc1-45ad-85bd-a0f37dc52fa6"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "w = [0.1,0.1,0.1]\n",
+        "b = 0.1\n",
+        "J = cost_function(w, X_train, Y_train, b, m)\n",
+        "print(J)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pJ_xMdphXcn1",
+        "outputId": "69a7f067-84c3-47be-ec29-266176488949"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "31.623090000000012\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def compute_gradient(X, Y, w, b):\n",
+        "  m,n = X.shape\n",
+        "  dj_dw = np.zeros((n,))\n",
+        "  dj_db = 0\n",
+        "  for i in range(m):\n",
+        "    error = pred(w, X[i, :], b) - Y[i]\n",
+        "    dj_db += error\n",
+        "    for j in range(n):\n",
+        "      dj_dw[j] = dj_dw[j] + error * X[i, j]\n",
+        "  dj_dw = dj_dw/m\n",
+        "  dj_db = dj_db/m\n",
+        "  return dj_dw, dj_db"
+      ],
+      "metadata": {
+        "id": "PY1QTaWPcrU2"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "def gradient_descent(X, Y, w, b, alpha, cost_function, gradient_function, iters):\n",
+        "  J_history = []\n",
+        "  m,n = X.shape\n",
+        "  for i in range(iters):\n",
+        "    # gradient descent\n",
+        "    dj_dw, dj_db = gradient_function(X, Y, w, b)\n",
+        "    w = w - alpha * dj_dw\n",
+        "    b = b - alpha * dj_db\n",
+        "\n",
+        "    # cost function\n",
+        "    J = cost_function(w, X, Y, b, m)\n",
+        "    if i<10000:\n",
+        "      J_history.append(J)\n",
+        "    if (i% math.ceil(iters / 20) == 0):\n",
+        "      print(f\"iters: {i:4d}, J: {J_history[-1]:8.2f}\")\n",
+        "  return w, b, J_history"
+      ],
+      "metadata": {
+        "id": "dKCGW_fXkKky"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m,n = X_train.shape\n",
+        "w = np.zeros((n,))\n",
+        "alpha = 5.0e-7\n",
+        "iters = 2000\n",
+        "w_final, b_final, J_hist = gradient_descent(X_train, Y_train, w, b, alpha, cost_function, compute_gradient, iters)\n",
+        "print(f\"final b and final w: {b_final:0.2f},{w_final} \")\n",
+        "m,_ = X_train.shape\n",
+        "for i in range(5):\n",
+        "    print(f\"prediction: {np.dot(X_train[i], w_final) + b_final:0.2f}, target value: {Y_train[i]}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_GTLiy0xnq2h",
+        "outputId": "2216c959-24c2-4552-f534-8d8f1b0f105a"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "iters:    0, J:   108.16\n",
+            "iters:  100, J:    14.29\n",
+            "iters:  200, J:     8.86\n",
+            "iters:  300, J:     8.22\n",
+            "iters:  400, J:     7.86\n",
+            "iters:  500, J:     7.54\n",
+            "iters:  600, J:     7.25\n",
+            "iters:  700, J:     6.98\n",
+            "iters:  800, J:     6.72\n",
+            "iters:  900, J:     6.49\n",
+            "iters: 1000, J:     6.27\n",
+            "iters: 1100, J:     6.07\n",
+            "iters: 1200, J:     5.88\n",
+            "iters: 1300, J:     5.70\n",
+            "iters: 1400, J:     5.54\n",
+            "iters: 1500, J:     5.39\n",
+            "iters: 1600, J:     5.25\n",
+            "iters: 1700, J:     5.11\n",
+            "iters: 1800, J:     4.99\n",
+            "iters: 1900, J:     4.87\n",
+            "final b and final w: 0.10,[0.06834635 0.06439177 0.05111693] \n",
+            "prediction: 21.80, target value: 22.1\n",
+            "prediction: 7.98, target value: 10.4\n",
+            "prediction: 7.78, target value: 9.3\n",
+            "prediction: 16.11, target value: 18.5\n",
+            "prediction: 16.14, target value: 12.9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KIapGZIwofuk"
       },
       "execution_count": null,
       "outputs": []
